# pyproject.toml (for Comfy Registry)

[project]
# Unique identifier for your node package. Immutable after creation on the registry.
name = "ComfyUI-IMGNR-Utils"
description = "Utility Nodes by Imagineer: Split Screen View; Catch and Edit Text ; Preview Image No Save / Ad-hoc Save ; UMightHaveANodeForThat ; Txt2Combobox dynamic node creation."
# Your node package's version. MUST follow semantic versioning (e.g., MAJOR.MINOR.PATCH).
version = "3.0.0" #
# license = { file = "LICENSE" }
# Project dependencies. PEP 621 standard replaces requirements.txt here.
dependencies = []

[project.urls]
Repository = "https://github.com/ImagineerNL/ComfyUI-IMGNR-Utils"

[tool.comfy]
PublisherId = "imagineernl" # Publisher ID from Comfy Registry Website
DisplayName = "ComfyUI-IMGNR-Utils" # Display name for the Custom Node. Can be changed later
# URL pointing to an icon for your package. MUST be a direct link to an image.
# SVG, PNG, JPG or GIF (MAX. 800x400px).
Icon = "https://raw.githubusercontent.com/ImagineerNL/ComfyUI-IMGNR-Utils/refs/heads/main/img/IMGNR-Utils.jpg" #