# pyproject.toml (for Comfy Registry)

[project]
# Unique identifier for your node package. Immutable after creation on the registry.
name = "ComfyUI-IMGNR-Utils"
description = "lightweight utility pack: Split Screen, Catch&Edit Text Tools, Smart Previews plus Compare and a DIY Node engine. Includes UMightHaveANodeForThat for (missing)node alternatives. All power, no bloat, and absolutely no external requirements."
# Your node package's version. MUST follow semantic versioning (e.g., MAJOR.MINOR.PATCH).
version = "3.3.3" #
license = { file = "LICENSE" }
# Project dependencies. PEP 621 standard replaces requirements.txt here.
dependencies = []

[project.urls]
Repository = "https://github.com/ImagineerNL/ComfyUI-IMGNR-Utils"

[tool.comfy]
PublisherId = "imagineernl" # Publisher ID from Comfy Registry Website
DisplayName = "ComfyUI-IMGNR-Utils"
Icon = "https://raw.githubusercontent.com/ImagineerNL/ComfyUI-IMGNR-Utils/refs/heads/main/img/IMGNR-Utils.jpg" #